@@ -15,12 +15,13 @@
 <a href="CoreTasks/common.html">Common Attributes</a><br>
 <a href="CoreTypes/description.html">Description Type</a><br>
 <a href="dirtasks.html">Directory-based Tasks</a><br>
+<a href="CoreTypes/dirset.html">DirSet</a><br>
 <a href="CoreTypes/filelist.html">FileList</a><br>
 <a href="CoreTypes/fileset.html">FileSet</a><br>
 <a href="CoreTypes/mapper.html">File Mappers</a><br>
 <a href="CoreTypes/filterchain.html">FilterChains and FilterReaders</a><br>
-<a href="CoreTypes/filterset.html">Filterset</a><br>
-<a href="CoreTypes/patternset.html">Patternset</a><br>
+<a href="CoreTypes/filterset.html">FilterSet</a><br>
+<a href="CoreTypes/patternset.html">PatternSet</a><br>
 <a href="CoreTypes/xmlcatalog.html">XMLCatalog</a><br>
 </body>
 </html>
