@@ -354,9 +354,13 @@ supports <code>path</code> and
 <pre>
     &lt;classpath path=&quot;${classpath}&quot;/&gt;
 </pre>
-<p>In addition, <a href="CoreTypes/fileset.html">FileSet</a>s can be specified via
-nested <code>&lt;fileset&gt;</code> elements. The order in which the files
-building up a fileset are added to the path-like structure is not
+<p>In addition, <a href="CoreTypes/dirset.html">DirSet</a>s,
+<a href="CoreTypes/fileset.html">FileSet</a>s, and 
+<a href="CoreTypes/filelist.html">FileList</a>s
+can be specified via nested <code>&lt;dirset&gt;</code>,
+<code>&lt;fileset&gt;</code>, and <code>&lt;filelist&gt;</code>
+elements, respectively. <em>Note</em>: The order in which the files
+building up a FileSet are added to the path-like structure is not
 defined.</p>
 <pre>
     &lt;classpath&gt;
@@ -365,11 +369,20 @@ defined.</p>
         &lt;include name=&quot;**/*.jar&quot;/&gt;
       &lt;/fileset&gt;
       &lt;pathelement location=&quot;classes&quot;/&gt;
+      &lt;dirset dir=&quot;${build.dir}&quot;&gt;
+        &lt;include name=&quot;apps/**/classes&quot;/&gt;
+        &lt;exclude name=&quot;apps/**/*Test*&quot;/&gt;
+      &lt;/dirset&gt;
+      &lt;filelist refid=&quot;third-party_jars&quot;&gt;
     &lt;/classpath&gt;
 </pre>
 <p>This builds a path that holds the value of <code>${classpath}</code>,
-followed by all jar files in the <code>lib</code> directory, followed
-by the <code>classes</code> directory.</p>
+followed by all jar files in the <code>lib</code> directory, 
+the <code>classes</code> directory, all directories named
+<code>classes</code> under the <code>apps</code> subdirectory of
+<code>${build.dir}</code>, except those
+that have the text <code>Test</code> in their name, and
+the files specified in the referenced FileList.</p>
 <p>If you want to use the same path-like structure for several tasks,
 you can define them with a <code>&lt;path&gt;</code> element at the
 same level as <i>target</i>s, and reference them via their
